# SPDX-FileCopyrightText: 2026 shellkeep contributors
# SPDX-License-Identifier: GPL-3.0-or-later

ssh_sources = files(
    'sk_ssh_connection.c',
    'sk_ssh_hostkey.c',
    'sk_ssh_auth.c',
    'sk_ssh_channel.c',
    'sk_ssh_sftp.c',
    'sk_ssh_shell_fallback.c',
    'sk_ssh_crypto.c',
    'sk_ssh_keepalive.c',
    'reconnect.c',
)
